# shiftScheduler

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  base code - unmodified.py  data_import.py  data_manipulation.py  main.py  model_run.py  requirements.txt  scheduler.lp
backend/: .env.example  app.py  cost_calculator.py  data_import.py  data_manipulation.py  main.py  model_run.py  pyproject.toml  schemas.py
backend/auth/: __init__.py  config.py  dependencies.py  jwt_handler.py  oauth.py
backend/compliance/: __init__.py  ai_assistant.py  engine.py  types.py  validators.py
backend/db/: __init__.py  database.py  models.py  sync.py
backend/solvers/: __init__.py  base.py  gurobi_solver.py  ortools_solver.py  pulp_solver.py  types.py
backend/tests/: conftest.py  test_api.py  test_assignments_api.py  test_auth_security.py  test_compliance.py  test_data_import.py  test_data_manipulation.py  test_integration.py  test_locked_shifts.py  test_schedule_constraints.py  test_solvers.py  test_time_parsing.py
backend/utils/: __init__.py  time.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/employees/: MultiSlotTimeEditor.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  ScheduleEditContext.tsx
frontend/src/hooks/: useAsyncData.ts  useScheduleEdit.ts
frontend/src/pages/: AuthCallback.tsx  Compliance.tsx  Dashboard.tsx  Employees.tsx  History.tsx  LoginPage.tsx  Logs.tsx  Schedule.tsx  Settings.tsx  Stores.tsx
frontend/src/types/: schedule.ts
(+16 files in other folders)
